--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,144 @@
-<header class="site-header">
+ <div class="header">
+     <div class="container">
+         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
-  <div class="wrapper">
+         <div class="footer-links"> 
+         <ul class="noList">
+            {% if site.social.email %}
+            <li><a href="mailto:{{ site.social.email }}">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                   width="79.536px" height="79.536px" viewBox="0 0 79.536 79.536" style="enable-background:new 0 0 79.536 79.536;"
+                   xml:space="preserve">
+                  <path style="fill:#010002;" d="M39.773,1.31L0,31.004v47.222h79.536V31.004L39.773,1.31z M28.77,22.499
+                     c1.167-2.133,2.775-3.739,4.815-4.805c2.035-1.075,4.357-1.616,6.983-1.616c2.214,0,4.191,0.435,5.921,1.292
+                     c1.729,0.87,3.045,2.094,3.967,3.687c0.9,1.595,1.367,3.334,1.367,5.217c0,2.247-0.694,4.279-2.082,6.097
+                     c-1.74,2.292-3.961,3.436-6.68,3.436c-0.732,0-1.279-0.122-1.654-0.38c-0.365-0.262-0.621-0.632-0.743-1.129
+                     c-1.022,1.012-2.231,1.52-3.589,1.52c-1.465,0-2.679-0.507-3.643-1.509c-0.966-1.012-1.447-2.361-1.447-4.031
+                     c0-2.084,0.578-3.966,1.743-5.672c1.416-2.084,3.218-3.13,5.424-3.13c1.571,0,2.731,0.601,3.475,1.805l0.331-1.468h3.5
+                     l-1.998,9.479c-0.125,0.606-0.187,0.986-0.187,1.163c0,0.228,0.052,0.38,0.149,0.497c0.099,0.111,0.223,0.165,0.357,0.165
+                     c0.436,0,0.979-0.248,1.646-0.769c0.901-0.663,1.627-1.574,2.181-2.695c0.554-1.129,0.839-2.299,0.839-3.508
+                     c0-2.165-0.782-3.977-2.352-5.445c-1.573-1.45-3.77-2.185-6.578-2.185c-2.393,0-4.417,0.487-6.077,1.468
+                     c-1.66,0.966-2.913,2.343-3.765,4.114c-0.839,1.76-1.258,3.607-1.258,5.52c0,1.856,0.479,3.552,1.411,5.074
+                     c0.945,1.533,2.26,2.641,3.956,3.345c1.696,0.697,3.643,1.046,5.828,1.046c2.097,0,3.909-0.293,5.432-0.881
+                     c1.522-0.587,2.739-1.457,3.666-2.641h2.807c-0.88,1.792-2.227,3.192-4.049,4.215c-2.092,1.163-4.64,1.74-7.644,1.74
+                     c-2.918,0-5.426-0.487-7.542-1.468c-2.121-0.986-3.689-2.434-4.73-4.35c-1.028-1.918-1.535-4.008-1.535-6.268
+                     C27.017,26.952,27.595,24.64,28.77,22.499z M2.804,31.941l29.344,19.68L2.804,74.333V31.941z M5.033,75.844l34.74-26.885
+                     l34.729,26.885H5.033z M76.729,74.333L47.391,51.621l29.339-19.68V74.333z M41.205,24.661c0.466,0.531,0.699,1.295,0.699,2.292
+                     c0,0.891-0.174,1.856-0.513,2.879c-0.334,1.036-0.743,1.826-1.209,2.361c-0.318,0.375-0.658,0.652-0.992,0.826
+                     c-0.439,0.249-0.906,0.37-1.41,0.37c-0.674,0.006-1.23-0.264-1.691-0.794c-0.45-0.531-0.673-1.346-0.673-2.465
+                     c0-0.839,0.158-1.805,0.487-2.889c0.329-1.088,0.81-1.916,1.453-2.509c0.647-0.588,1.346-0.881,2.1-0.881
+                     C40.162,23.856,40.749,24.125,41.205,24.661z"/>
+                  </svg>
+            </a></li>
+            {% endif %}
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            {% if site.social.linkedin %}
+            <li><a href="https://twitter.com/{{ site.social.twitter }}">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="430.117px" height="430.118px" viewBox="0 0 430.117 430.118" style="enable-background:new 0 0 430.117 430.118;"
+                 xml:space="preserve">
+                <path id="LinkedIn__x28_alt_x29_" d="M398.355,0H31.782C14.229,0,0.002,13.793,0.002,30.817v368.471
+                    c0,17.025,14.232,30.83,31.78,30.83h366.573c17.549,0,31.76-13.814,31.76-30.83V30.817C430.115,13.798,415.904,0,398.355,0z
+                     M130.4,360.038H65.413V165.845H130.4V360.038z M97.913,139.315h-0.437c-21.793,0-35.92-14.904-35.92-33.563
+                    c0-19.035,14.542-33.535,36.767-33.535c22.227,0,35.899,14.496,36.331,33.535C134.654,124.415,120.555,139.315,97.913,139.315z
+                     M364.659,360.038h-64.966V256.138c0-26.107-9.413-43.921-32.907-43.921c-17.973,0-28.642,12.018-33.327,23.621
+                    c-1.736,4.144-2.166,9.94-2.166,15.728v108.468h-64.954c0,0,0.85-175.979,0-194.192h64.964v27.531
+                    c8.624-13.229,24.035-32.1,58.534-32.1c42.76,0,74.822,27.739,74.822,87.414V360.038z M230.883,193.99
+                    c0.111-0.182,0.266-0.401,0.42-0.614v0.614H230.883z"/>
+            </svg>
+            </a></li>
+            {% endif %}
 
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
+            {% if site.social.twitter %}
+            <li><a href="fr.linkedin.com/in/{{ site.social.linkedid }}">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                   width="94px" height="94px" viewBox="0 0 94 94" style="enable-background:new 0 0 94 94;" xml:space="preserve">
+                  <path d="M89,0H5C2.239,0,0,2.239,0,5v84c0,2.761,2.239,5,5,5h84c2.762,0,5-2.239,5-5V5C94,2.239,91.762,0,89,0z M85.874,23.302
+                     c-2.122,3.177-4.752,5.922-7.817,8.164c0.024,0.616,0.036,1.233,0.036,1.855c0,22.315-16.979,45.396-45.396,45.396
+                     c-8.687,0-17.144-2.479-24.458-7.169c-0.152-0.097-0.217-0.286-0.155-0.456c0.061-0.169,0.234-0.273,0.409-0.254
+                     c1.229,0.146,2.482,0.219,3.729,0.219c6.758,0,13.156-2.089,18.567-6.053c-6.487-0.547-12.062-4.938-14.068-11.199
+                     c-0.041-0.131-0.011-0.271,0.08-0.375c0.09-0.103,0.229-0.146,0.362-0.123c1.797,0.342,3.624,0.362,5.387,0.078
+                     c-6.69-2.08-11.393-8.346-11.393-15.481l0.002-0.208c0.003-0.136,0.077-0.26,0.193-0.326c0.118-0.068,0.264-0.069,0.381-0.003
+                     c1.743,0.968,3.677,1.591,5.655,1.828c-3.844-3.064-6.102-7.709-6.102-12.678c0-2.867,0.76-5.686,2.194-8.148
+                     c0.064-0.109,0.178-0.182,0.305-0.19c0.127-0.013,0.25,0.042,0.329,0.142c7.87,9.651,19.444,15.595,31.821,16.358
+                     c-0.208-1.04-0.312-2.11-0.312-3.191c0-8.936,7.271-16.205,16.206-16.205c4.396,0,8.639,1.806,11.681,4.96
+                     c3.432-0.699,6.697-1.96,9.715-3.75c0.139-0.082,0.312-0.069,0.438,0.03c0.125,0.101,0.176,0.268,0.126,0.421
+                     c-1.021,3.199-3.018,5.989-5.696,8.004c2.523-0.439,4.974-1.182,7.302-2.214c0.157-0.072,0.342-0.027,0.453,0.104
+                     C85.959,22.97,85.971,23.158,85.874,23.302z"/>
+                  </svg>
+            </a></li>
+            {% endif %}
+            {% if site.social.github %}
+            <li><a href="https://github.com/{{ site.social.github }}">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                   width="438.549px" height="438.549px" viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
+                   xml:space="preserve">
+                  <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
+                     c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63
+                     c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996
+                     c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136
+                     c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559
+                     c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559
+                     c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997
+                     c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851
+                     c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136
+                     c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41
+                     c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126
+                     c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817
+                     c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994
+                     c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849
+                     c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24
+                     c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979
+                     c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146
+                     c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995
+                     c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906
+                     C438.536,184.851,428.728,148.168,409.132,114.573z"/>
+                  </svg>
+            </a></li>
+            {% endif %} 
+            {% if site.social.researchgate %}
+            <li><a href="https://www.researchgate.net/profile/{{ site.social.researchgate }}">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="94px" height="94px" viewBox="0 0 94 94" style="enable-background:new 0 0 94 94;" xml:space="preserve">
+                  <path d="M89,0H5C2.238,0,0,2.238,0,5v84c0,2.762,2.238,5,5,5h84c2.762,0,5-2.238,5-5V5C94,2.238,91.762,0,89,0z M45.064,73.975
+                  H33.082c-0.563-0.756-0.922-1.623-1.074-2.605c-0.154-0.982-0.256-2.001-0.309-3.059L31.4,57.959
+                  c-0.102-2.117-0.625-3.775-1.576-4.986c-0.948-1.211-2.551-1.814-4.799-1.814h-5.777v22.816H8.313V20.028H28.51
+                  c4.557,0,8.101,1.146,10.632,3.438c2.529,2.293,3.796,5.78,3.796,10.465c0,3.626-0.734,6.586-2.203,8.878
+                  c-1.467,2.292-3.744,3.765-6.832,4.421v0.15c1.872,0.252,3.363,0.717,4.479,1.396c1.112,0.683,1.975,1.662,2.581,2.945
+                  c0.607,1.285,1.025,2.91,1.253,4.875s0.366,4.381,0.417,7.254c0.05,2.868,0.217,5.06,0.495,6.572
+                  c0.277,1.51,0.923,2.542,1.937,3.098L45.064,73.975L45.064,73.975z M85.688,73.975h-8.051V68.99h-0.15
+                  c-1.317,2.111-2.897,3.652-4.746,4.604c-1.85,0.96-4.061,1.438-6.643,1.438c-3.342,0-6.063-0.616-8.164-1.851
+                  c-2.103-1.232-3.746-3.06-4.935-5.479c-1.188-2.416-1.989-5.402-2.392-8.95c-0.407-3.555-0.609-7.671-0.609-12.354
+                  c0-4.536,0.291-8.515,0.875-11.939c0.581-3.425,1.58-6.284,2.999-8.574c1.416-2.29,3.291-4.018,5.618-5.177
+                  c2.326-1.159,5.24-1.739,8.732-1.739c5.971,0,10.274,1.475,12.907,4.422c2.631,2.947,3.948,7.166,3.948,12.655H74.6
+                  c0-0.956-0.113-1.975-0.342-3.062c-0.226-1.082-0.596-2.062-1.102-2.944c-0.504-0.881-1.149-1.611-1.936-2.193
+                  c-0.783-0.577-1.734-0.868-2.848-0.868c-2.633,0-4.53,1.463-5.693,4.383c-1.166,2.921-1.746,7.758-1.746,14.509
+                  c0,3.271,0.101,6.207,0.301,8.8c0.201,2.596,0.574,4.812,1.104,6.651c0.531,1.836,1.291,3.245,2.277,4.229
+                  c0.988,0.979,2.264,1.473,3.836,1.473c0.656,0,1.377-0.178,2.162-0.53c0.785-0.351,1.52-0.879,2.201-1.584
+                  c0.684-0.706,1.254-1.599,1.709-2.685c0.455-1.084,0.686-2.353,0.686-3.814v-5.516h-7.215v-8.011h17.691v29.089H85.688z"/>
+                  <path d="M24.41,28.038h-5.162v15.561h4.556c2.631,0,4.655-0.615,6.074-1.851c1.416-1.231,2.124-3.311,2.124-6.231
+                  C32.002,30.532,29.474,28.038,24.41,28.038z"/>
+                  </svg>
+            </a></li>
+            {% endif %}
 
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+         </ul>
       </div>
-    </nav>
 
-  </div>
+         <nav class="nav-collapse">
+             <ul class="noList">
+                 {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url %}{% assign current = 'current' %}{% endif %}
+                 <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+                     <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                 </li> 
+                 {% endfor %}
+                 <li> <a href="https://fr.linkedin.com/in/berenicebatut" target="_blank">CV</a></li>
+                 <li><a href="https://bebatut-blog.github.io">Blog</a></li>
+             </ul>
+         </nav>
 
-</header>
+
+
+     </div>
+
+ </div><!-- end .header -->
