--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,11 +33,13 @@
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
     <!--[if IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie.css" | prepend: site.baseurl }}"><![endif]-->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    <script type='text/javascript' src="{{ "/assets/js/jquery-1.11.2.min.js" | prepend: site.baseurl }}"></script>
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
 </head>
