--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,21 @@
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/responsive-nav.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
+
+<script type='text/javascript'>
+jQuery(document).ready(function() {
+    jQuery('.toggle').each(function () {
+        var $toggleSummary = $(this);
+        var $toggler       = $toggleSummary.find('.toggler').first();
+        var $toggled       = $toggleSummary.find('.toggled').first();
+
+        $toggled.hide();
+
+        $toggler.on('click', function (e) {
+            e.preventDefault();
+
+            $toggled.toggle(400);
+        });
+    });
+});
+</script>
