Add link to bebatut.fr on top

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
  <div class="header">
      <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+         <h1 class="logo"><a href="http://bebatut.fr/">{{ site.title }}</a></h1>
 
          <div class="footer-links"> 
          <ul class="noList">
