Comment link to blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                  </li> 
                  {% endfor %}
                  <li> <a href="https://fr.linkedin.com/in/berenicebatut" target="_blank">CV</a></li>
-                 <li><a href="https://bebatut-blog.github.io">Blog</a></li>
+                 <!--<li><a href="https://bebatut-blog.github.io">Blog</a></li>-->
              </ul>
          </nav>
 
