Add css to remove space in list

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,3 +19,11 @@
 .lectures{
     padding-left: 0;
 }
+
+.lecture-detailed-content{
+    margin-bottom: 0;
+}
+
+.lecture-content{
+    margin-bottom: 0.5em;
+}
