Add absolute link to icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,32 +6,32 @@
          <ul class="noList">
             {% if site.social.email %}
             <li><a href="mailto:{{ site.social.email }}">
-                <img src="assets/img/email106.svg" />
+                <img src="/assets/img/email106.svg" />
             </a></li>
             {% endif %}
 
             {% if site.social.linkedin %}
             <li><a href="fr.linkedin.com/in/{{ site.social.linkedid }}">
-                <img src="assets/img/linkedin12.svg" />
+                <img src="/assets/img/linkedin12.svg" />
             </svg>
             </a></li>
             {% endif %}
 
             {% if site.social.twitter %}
             <li><a href="https://twitter.com/{{ site.social.twitter }}">
-                <img src="assets/img/twitter39.svg" />
+                <img src="/assets/img/twitter39.svg" />
             </a></li>
             {% endif %}
 
             {% if site.social.github %}
             <li><a href="https://github.com/{{ site.social.github }}">
-                <img src="assets/img/github12.svg" />
+                <img src="/assets/img/github12.svg" />
             </a></li>
             {% endif %} 
 
             {% if site.social.researchgate %}
             <li><a href="https://www.researchgate.net/profile/{{ site.social.researchgate }}">
-                 <img src="assets/img/researchgate2.svg" />
+                 <img src="/assets/img/researchgate2.svg" />
             </a></li>
             {% endif %}
 
