--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,12 @@
             </a></li>
             {% endif %}
 
+            {% if site.social.orcid %}
+            <li><a href="https://orcid.org/{{ site.social.orcid }}">
+                 <img src="/assets/img/orcid.png" />
+            </a></li>
+            {% endif %}
+
          </ul>
       </div>
 
