--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
             {% endif %}
 
             {% if site.social.linkedin %}
-            <li><a href="fr.linkedin.com/in/{{ site.social.linkedid }}">
+            <li><a href="https://fr.linkedin.com/in/{{ site.social.linkedid }}">
                 <img src="/assets/img/linkedin12.svg" />
             </svg>
             </a></li>
