Fix path to training page

--- a/_includes/default-header.html
+++ b/_includes/default-header.html
@@ -41,11 +41,10 @@
 
             <div class="navbar-end">
                 <a class="navbar-item" href="/"> Home </a>
-                <a class="navbar-item" href="training/"> Training </a>
+                <a class="navbar-item" href="/training"> Training </a>
                 <a class="navbar-item" href="https://orcid.org/{{ site.orcid }}"> Publications </a>
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link"> Projects </a>
-          
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="http://training.galaxyproject.org/"> Galaxy Training Material </a>
                         <a class="navbar-item" href="https://streetscience.community/"> Street Science Community </a>
